--- a/src/components/Calculator/Calculator.css
+++ b/src/components/Calculator/Calculator.css
@@ -1,8 +1,9 @@
 #container {
-	display: flex;
 	align-items: center;
-	justify-content: center;
+	display: flex;
 	height: 100vh;
+	width: 100vw;
+	justify-content: center;
 }
 
 #calculatorBody {
@@ -20,15 +21,15 @@ input[type='number'] {
 }
 
 #calcScreen {
-	font-size: 40px;
-	padding: 20px;
+	background-color: grey;
 	border-radius: 5px;
 	border-style: solid;
-	background-color: grey;
-	margin-bottom: 20px;
+	caret-color: transparent;
 	color: white;
 	direction: rtl;
-	caret-color: transparent;
+	font-size: 40px;
+	margin-bottom: 20px;
+	padding: 20px;
 }
 
 #calcScreen:hover {
@@ -40,11 +41,23 @@ input[type='number'] {
 	grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
+button {
+	transition: opacity 0.25s;
+}
+
+button:active {
+	opacity: 0.6;
+}
+
+button:hover {
+	opacity: 0.8;
+}
+
 .funcButton {
 	background-color: red;
-	padding: 20px;
 	font-size: 30px;
 	margin: 2px;
+	padding: 20px;
 }
 
 #numDiv {
@@ -58,13 +71,14 @@ input[type='number'] {
 }
 
 .numberButton {
-	padding: 20px;
+	background-color: white;
 	font-size: 30px;
 	margin: 3px;
+	padding: 20px;
 }
 
 .equalsButton {
-	padding: 20px;
 	font-size: 30px;
 	margin: 3px;
+	padding: 20px;
 }
